# culture_questions_agent

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json
conf/: config.yaml  config_sota.yaml
notebooks/: 1-data.ipynb  E9_RAG_Solutions.ipynb
prompts/: completion_prompt.jinja  mcq_prompt.jinja  mcq_yesno_nll_prompt.jinja  query_generation_prompt.jinja  saq_prompt.jinja
scripts/: evaluate.sh  inference.sh  inference_mcq.sh
src/culture_questions_agent/: __init__.py  base_predictor.py  builder.py  colbert_retriever.py  data.py  evaluate.py  generative_predictor.py  hybrid_retriever.py  inference.py  main.py  metadata_extractor.py  multi_retriever.py  nll_predictor.py  predictor_factory.py  query_generator.py  reranker.py  search_tools.py  section_parser.py  semantic_chunker.py  structures.py  utils.py  workflow.py
src/culture_questions_agent/ingestion/: ingest.py  questions.py  web.py  wikipedia.py  wikivoyage.py
src/culture_questions_agent/predictor/: base.py  generative_predictor.py  nll_predictor.py
